--- a/index.html
+++ b/index.html
@@ -19,29 +19,78 @@
 
 <body>
     <header class="header">
-        <div class="header-container container">
-            <nav class="navigation">
-                <a href="./index.html" class="logo"><span class="logo__web">Web</span><span
-                        class="logo__studio">Studio</span></a>
-                <ul class="navigation__list">
-                    <li class="navigation__item"><a href="./index.html" class="navigation__link active">Студія</a></li>
-                    <li class="navigation__item"><a href="./portfolio.html" class="navigation__link">Портфоліо</a></li>
-                    <li class="navigation__item"><a href="/contacts" class="navigation__link">Контакти</a></li>
+        <div class="header__container container">
+            <a href="./index.html" class="logo"><span class="logo__web">Web</span><span
+                    class="logo__studio">Studio</span></a>
+            <div class="header-desktop">
+                <nav class="navigation">
+                    <ul class="navigation__list">
+                        <li class="navigation__item"><a href="./index.html" class="navigation__link active">Студія</a>
+                        </li>
+                        <li class="navigation__item"><a href="./portfolio.html" class="navigation__link">Портфоліо</a>
+                        </li>
+                        <li class="navigation__item"><a href="/contacts" class="navigation__link">Контакти</a></li>
+                    </ul>
+                </nav>
+                <ul class="contacts">
+                    <li class="contacts__item"><a href="mailto:info@devstudio.com" class="contacts__item--style"><svg
+                                class="contacts__item--icon" width="16" height="12">
+                                <use href="./images/icons.svg#icon-mail"></use>
+                            </svg>info@devstudio.com</a>
+                    </li>
+                    <li class="contacts__item"><a href="tel:+380961111111" class="contacts__item--style"><svg
+                                class="contacts__item--icon" width="16" height="12">
+                                <use href="./images/icons.svg#icon-smartphone"></use>
+                            </svg>+38 096 111 11 11</a>
+                    </li>
                 </ul>
-            </nav>
-            <ul class="contacts">
-                <li class="contacts__item"><a href="mailto:info@devstudio.com" class="contacts__item--style"><svg
-                            class="contacts__item--icon" width="16" height="12">
-                            <use href="./images/icons.svg#icon-mail"></use>
-                        </svg>info@devstudio.com</a>
-                </li>
-                <li class="contacts__item"><a href="tel:+380961111111" class="contacts__item--style"><svg
-                            class="contacts__item--icon" width="16" height="12">
-                            <use href="./images/icons.svg#icon-smartphone"></use>
-                        </svg>+38 096 111 11 11</a>
-                </li>
-            </ul>
+            </div>
+            <div class="header__mobile js-menu-container">
+                <!-- <a href="./index.html" class="logo"><span class="logo__web">Web</span><span class="logo__studio">Studio</span></a> -->
+                <div class="header_overlay">
+                    <button class="close_menu js-close-menu" type=button>
+                        <svg class="close-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-close"></use>
+                        </svg>
+                    </button>
+                    <nav class="mob-nav">
+                        <ul class="mob-nav__list">
+                            <li class="mob-nav__item"><a href="./index.html" class="mob-nav__link">Студія</a>
+                            </li>
+                            <li class="mob-nav__item"><a href="./portfolio.html" class="mob-nav__link">Портфоліо</a>
+                            </li>
+                            <li class="mob-nav__item"><a href="/contacts" class="mob-nav__link">Контакти</a></li>
+                        </ul>
+                    </nav>
+                    <ul class="mob-contacts">
+                        <li class="mob-contacts__item"><a href="mailto:info@devstudio.com"
+                                class="mob-contacts__item--style"><svg class="contacts__item--icon" width="16"
+                                    height="12">
+                                    <use href="./images/icons.svg#icon-mail"></use>
+                                </svg>info@devstudio.com</a>
+                        </li>
+                        <li class="mob-contacts__item"><a href="tel:+380961111111"
+                                class="mob-contacts__item--style"><svg class="contacts__item--icon" width="16"
+                                    height="12">
+                                    <use href="./images/icons.svg#icon-smartphone"></use>
+                                </svg>+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                    <ul class="mobile_soc-links">
+                        <li class="mobile_soc-link"><a class="" href="">Instagram</a></li>
+                        <li class="mobile_soc-link"><a class="" href="">Twitter</a></li>
+                        <li class="mobile_soc-link"><a class="" href="">Facebook</a></li>
+                        <li class="mobile_soc-link"><a class="" href="">LinkedIn</a></li>
+                    </ul>
+
+                </div>
+            </div>
+            <button class="open_menu js-open-menu" type="button"><svg class="open-icon" width="40" height="40">
+                    <use href="./images/icons.svg#icon-menu_24px"></use>
+                </svg>
+            </button>
         </div>
+
     </header>
 
     <main>
@@ -430,6 +479,7 @@
             </form>
         </div>
     </div>
+    <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
 </body>
 
