--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                 <!-- <a href="./index.html" class="logo"><span class="logo__web">Web</span><span class="logo__studio">Studio</span></a> -->
                 <div class="header_overlay">
                     <button class="close_menu js-close-menu" type=button>
-                        <svg class="close-icon" width="18" height="18">
+                        <svg class="close-icon" width="40" height="40">
                             <use href="./images/icons.svg#icon-close"></use>
                         </svg>
                     </button>
                     <nav class="mob-nav">
                         <ul class="mob-nav__list">
-                            <li class="mob-nav__item"><a href="./index.html" class="mob-nav__link">Студія</a>
+                            <li class="mob-nav__item"><a href="./index.html" class="mob-nav__link active">Студія</a>
                             </li>
                             <li class="mob-nav__item"><a href="./portfolio.html" class="mob-nav__link">Портфоліо</a>
                             </li>
@@ -63,24 +63,19 @@
                         </ul>
                     </nav>
                     <ul class="mob-contacts">
+
+                        </li>
+                        <li class="mob-contacts__item"><a href="tel:+380961111111" class="mob-contacts__item--tel">+38
+                                096 111 11 11</a>
+                        </li>
                         <li class="mob-contacts__item"><a href="mailto:info@devstudio.com"
-                                class="mob-contacts__item--style"><svg class="contacts__item--icon" width="16"
-                                    height="12">
-                                    <use href="./images/icons.svg#icon-mail"></use>
-                                </svg>info@devstudio.com</a>
-                        </li>
-                        <li class="mob-contacts__item"><a href="tel:+380961111111"
-                                class="mob-contacts__item--style"><svg class="contacts__item--icon" width="16"
-                                    height="12">
-                                    <use href="./images/icons.svg#icon-smartphone"></use>
-                                </svg>+38 096 111 11 11</a>
-                        </li>
+                                class="mob-contacts__item--mail">info@devstudio.com</a>
                     </ul>
                     <ul class="mobile_soc-links">
-                        <li class="mobile_soc-link"><a class="" href="">Instagram</a></li>
-                        <li class="mobile_soc-link"><a class="" href="">Twitter</a></li>
-                        <li class="mobile_soc-link"><a class="" href="">Facebook</a></li>
-                        <li class="mobile_soc-link"><a class="" href="">LinkedIn</a></li>
+                        <li class=""><a class="mobile_soc-link" href="">Instagram</a></li>
+                        <li class=""><a class="mobile_soc-link" href="">Twitter</a></li>
+                        <li class=""><a class="mobile_soc-link" href="">Facebook</a></li>
+                        <li class=""><a class="mobile_soc-link" href="">LinkedIn</a></li>
                     </ul>
 
                 </div>
@@ -186,7 +181,18 @@
                 <h2 class="team__title">Наша команда</h2>
                 <ul class="team__list">
                     <li class="team__item">
-                        <img src="images/product-disigner.jpg" alt="Ігор Дем'яненко, Product Disigner" width="270" />
+                        <picture>
+                            <source srcset="
+                                            ./images/team/mob-team-1-x1.jpg 1x,
+                                            ./images/team/mob-team-1-x1.jpg 2x" media="(max-width: 767px)" />
+                            <source srcset="
+                                            ./images/team/tab-team-1-x1.jpg 1x,
+                                            ./images/team/tab-team-1-x2.jpg 2x" media="(max-width: 1199px)" />
+                            <source srcset="
+                                            ./images/team/desk-team-1-x1.jpg 1x,
+                                            ./images/team/desk-team-1-x1.jpg 2x" media="(min-width: 1200px)" />
+                            <img src="./team/mob-team-1-x1.jpg" alt="Ігор Дем'яненко, Product Disigner" />
+                        </picture>
                         <div class="name__info">
                             <h3 class="name__info--name">Ігор Дем'яненко</h3>
                             <p class="name__info--position">Product Disigner</p>
@@ -223,7 +229,21 @@
                         </div>
                     </li>
                     <li class="team__item">
-                        <img src="images/frontend-developer.jpg" alt="Ольга Рєпіна, Frontend Developer" width="270" />
+                        <picture>
+                            <source srcset="
+                                                                    ./images/team/mob-team-2-x1.jpg 1x,
+                                                                    ./images/team/mob-team-2-x1.jpg 2x"
+                                media="(max-width: 767px)" />
+                            <source srcset="
+                                                                    ./images/team/tab-team-2-x1.jpg 1x,
+                                                                    ./images/team/tab-team-2-x2.jpg 2x"
+                                media="(max-width: 1199px)" />
+                            <source srcset="
+                                                                    ./images/team/desk-team-2-x1.jpg 1x,
+                                                                    ./images/team/desk-team-2-x1.jpg 2x"
+                                media="(min-width: 1200px)" />
+                            <img src="./team/mob-team-2-x1.jpg" alt="Ольга Рєпіна, Frontend Developer" />
+                        </picture>
                         <div class="name__info">
                             <h3 class="name__info--name">Ольга Рєпіна</h3>
                             <p class="name__info--position">Frontend Developer</p>
@@ -260,7 +280,21 @@
                         </div>
                     </li>
                     <li class="team__item">
-                        <img src="images/marketing.jpg" alt="Микола Тарасов, Marketing" width="270" />
+                        <picture>
+                            <source
+                                srcset="./images/team/mob-team-3-x1.jpg 1x,
+                                ./images/team/mob-team-3-x1.jpg 2x"
+                                media="(max-width: 767px)" />
+                            <source
+                                srcset="./images/team/tab-team-3-x1.jpg 1x,
+                                ./images/team/tab-team-3-x2.jpg 2x"
+                                media="(max-width: 1199px)" />
+                            <source
+                                srcset="./images/team/desk-team-3-x1.jpg 1x,
+                                ./images/team/desk-team-3-x1.jpg 2x"
+                                media="(min-width: 1200px)" />
+                            <img src="./team/mob-team-2-x1.jpg" alt="Микола Тарасов, Marketing" />
+                        </picture>
                         <div class="name__info">
                             <h3 class="name__info--name">Микола Тарасов</h3>
                             <p class="name__info--position">Marketing</p>
@@ -297,7 +331,21 @@
                         </div>
                     </li>
                     <li class="team__item">
-                        <img src="images/ui.jpg" alt="Михайло Єрмаков, UI Designer" width="270" />
+                        <picture>
+                            <source
+                                srcset="./images/team/mob-team-4-x1.jpg 1x,
+                                ./images/team/mob-team-4-x1.jpg 2x"
+                                media="(max-width: 767px)" />
+                            <source
+                                srcset="./images/team/tab-team-4-x1.jpg 1x,
+                                ./images/team/tab-team-4-x2.jpg 2x"
+                                media="(max-width: 1199px)" />
+                            <source
+                                srcset="./images/team/desk-team-4-x1.jpg 1x,
+                                ./images/team/desk-team-4-x1.jpg 2x"
+                                media="(min-width: 1200px)" />
+                            <img src="./team/mob-team-2-x1.jpg" alt="Михайло Єрмаков, UI Designer" />
+                        </picture>
                         <div class="name__info">
                             <h3 class="name__info--name">Михайло Єрмаков</h3>
                             <p class="name__info--position">UI Designer</p>
