--- a/portfolio.html
+++ b/portfolio.html
@@ -70,9 +70,10 @@
                         class="logo__studio">Studio</span></a>
                 <nav class="navigation">
                     <ul class="navigation__list">
-                        <li class="navigation__item"><a href="./index.html" class="navigation__link active">Студія</a>
+                        <li class="navigation__item"><a href="./index.html" class="navigation__link">Студія</a>
                         </li>
-                        <li class="navigation__item"><a href="./portfolio.html" class="navigation__link">Портфоліо</a>
+                        <li class="navigation__item"><a href="./portfolio.html"
+                                class="navigation__link active">Портфоліо</a>
                         </li>
                         <li class="navigation__item"><a href="/contacts" class="navigation__link">Контакти</a></li>
                     </ul>
