--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
                         <li class="navigation__item"><a href="./portfolio.html"
                                 class="navigation__link active">Портфоліо</a>
                         </li>
-                        <li class="navigation__item"><a href="/contacts" class="navigation__link">Контакти</a></li>
+                        <li class="navigation__item"><a href="./index.html" class="navigation__link">Контакти</a></li>
                     </ul>
                 </nav>
                 <ul class="contacts">
