--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                 </li>
                                 <li class="mob-nav__item"><a href="./portfolio.html" class="mob-nav__link">Портфоліо</a>
                                 </li>
-                                <li class="mob-nav__item"><a href="/contacts" class="mob-nav__link">Контакти</a></li>
+                                <li class="mob-nav__item"><a href="./index.html" class="mob-nav__link">Контакти</a></li>
                             </ul>
                         </nav>
                         <ul class="mob-contacts">
