--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         </li>
                         <li class="navigation__item"><a href="./portfolio.html" class="navigation__link">Портфоліо</a>
                         </li>
-                        <li class="navigation__item"><a href="/contacts" class="navigation__link">Контакти</a></li>
+                        <li class="navigation__item"><a href="./index.html" class="navigation__link">Контакти</a></li>
                     </ul>
                 </nav>
                 <ul class="contacts">
