--- a/index.html
+++ b/index.html
@@ -44,21 +44,22 @@
                                 <li class="mob-nav__item"><a href="./index.html" class="mob-nav__link">Контакти</a></li>
                             </ul>
                         </nav>
-                        <ul class="mob-contacts">
-                            <li class="mob-contacts__item"><a href="tel:+380961111111"
-                                    class="mob-contacts__item--tel">+38
-                                    096 111 11 11</a>
-                            </li>
-                            <li class="mob-contacts__item"><a href="mailto:info@devstudio.com"
-                                    class="mob-contacts__item--mail">info@devstudio.com</a>
-                        </ul>
-                        <ul class="mobile_soc-links">
-                            <li class=""><a class="mobile_soc-link" href="">Instagram</a></li>
-                            <li class=""><a class="mobile_soc-link" href="">Twitter</a></li>
-                            <li class=""><a class="mobile_soc-link" href="">Facebook</a></li>
-                            <li class=""><a class="mobile_soc-link" href="">LinkedIn</a></li>
-                        </ul>
-
+                        <div class="contacts-wrap">
+                            <ul class="mob-contacts">
+                                <li class="mob-contacts__item"><a href="tel:+380961111111"
+                                        class="mob-contacts__item--tel">+38
+                                        096 111 11 11</a>
+                                </li>
+                                <li class="mob-contacts__item"><a href="mailto:info@devstudio.com"
+                                        class="mob-contacts__item--mail">info@devstudio.com</a>
+                            </ul>
+                            <ul class="mobile_soc-links">
+                                <li class=""><a class="mobile_soc-link" href="">Instagram</a></li>
+                                <li class=""><a class="mobile_soc-link" href="">Twitter</a></li>
+                                <li class=""><a class="mobile_soc-link" href="">Facebook</a></li>
+                                <li class=""><a class="mobile_soc-link" href="">LinkedIn</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -102,7 +103,7 @@
             </div>
         </section>
         <!--Advantages-->
-        <section class="benefits">
+        <section class="benefits section">
             <div class="container">
                 <h2 class="visually-hidden">Наші переваги</h2>
                 <ul class="benefits__list">
@@ -156,7 +157,7 @@
                 </ul>
             </div>
         </section>
-        <section class="job section">
+        <section class="job">
             <div class="container">
                 <h2 class="job__title">Чим ми займаємося</h2>
                 <ul class="job__list">
