--- a/portfolio.html
+++ b/portfolio.html
@@ -115,14 +115,14 @@
                         <div class="exp-card">
                             <picture>
                                 <source srcset="
-                                ./images/portfolio/mob-port-1-x1.jpg 1x,
-                                ./images/portfolio/mob-port-1-x2.jpg 2x" media="(min-width: 320px)" />
+                                ./images/portfolio/desk-port-1-x1.jpg 1x,
+                                ./images/portfolio/desk-port-1-x2.jpg 2x" media="(min-width: 1200px)" />
                                 <source srcset="
                                 ./images/portfolio/tab-port-1-x1.jpg 1x,
                                 ./images/portfolio/tab-port-1-x2.jpg 2x" media="(min-width: 768px)" />
                                 <source srcset="
-                                ./images/portfolio/desk-port-1-x1.jpg 1x,
-                                ./images/portfolio/desk-port-1-x2.jpg 2x" media="(min-width: 1200px)" />
+                                ./images/portfolio/mob-port-1-x1.jpg 1x,
+                                ./images/portfolio/mob-port-1-x2.jpg 2x" media="(max-width: 767px)" />
                                 <img src="./images/portfolio/mob-port-1-x1.jpg" alt="Веб-сайт: Технокряк" />
                             </picture>
                             <div class="overlay">
@@ -141,14 +141,14 @@
                         <div class="exp-card">
                             <picture>
                                 <source srcset="
-                                ./images/portfolio/mob-port-2-x1.jpg 1x,
-                                ./images/portfolio/mob-port-2-x2.jpg 2x" media="(min-width: 320px)" />
+                                ./images/portfolio/desk-port-2-x1.jpg 1x,
+                                ./images/portfolio/desk-port-2-x2.jpg 2x" media="(min-width: 1200px)" />
                                 <source srcset="
                                 ./images/portfolio/tab-port-2-x1.jpg 1x,
                                 ./images/portfolio/tab-port-2-x2.jpg 2x" media="(min-width: 768px)" />
                                 <source srcset="
-                                ./images/portfolio/desk-port-2-x1.jpg 1x,
-                                ./images/portfolio/desk-port-2-x2.jpg 2x" media="(min-width: 1200px)" />
+                                ./images/portfolio/mob-port-2-x1.jpg 1x,
+                                ./images/portfolio/mob-port-2-x2.jpg 2x" media="(max-width: 767px)" />
                                 <img src="./images/portfolio/mob-port-2-x1.jpg"
                                     alt="Дизайн: Постер New Orlean vs Golden Star" />
                             </picture>
@@ -168,14 +168,14 @@
                         <div class="exp-card">
                             <picture>
                                 <source srcset="
-                                ./images/portfolio/mob-port-3-x1.jpg 1x,
-                                ./images/portfolio/mob-port-3-x2.jpg 2x" media="(min-width: 320px)" />
+                                ./images/portfolio/desk-port-3-x1.jpg 1x,
+                                ./images/portfolio/desk-port-3-x2.jpg 2x" media="(min-width: 1200px)" />
                                 <source srcset="
                                 ./images/portfolio/tab-port-3-x1.jpg 1x,
                                 ./images/portfolio/tab-port-3-x2.jpg 2x" media="(min-width: 768px)" />
                                 <source srcset="
-                                ./images/portfolio/desk-port-3-x1.jpg 1x,
-                                ./images/portfolio/desk-port-3-x2.jpg 2x" media="(min-width: 1200px)" />
+                                ./images/portfolio/mob-port-3-x1.jpg 1x,
+                                ./images/portfolio/mob-port-3-x2.jpg 2x" media="(mфч-width: 767px)" />
                                 <img src="./images/portfolio/mob-port-3-x1.jpg" alt="Додаток: Ресторан Seafood" />
                             </picture>
                             <div class="overlay">
@@ -194,14 +194,14 @@
                         <div class="exp-card">
                             <picture>
                                 <source srcset="
-                                ./images/portfolio/mob-port-4-x1.jpg 1x,
-                                ./images/portfolio/mob-port-4-x2.jpg 2x" media="(min-width: 320px)" />
+                                ./images/portfolio/desk-port-4-x1.jpg 1x,
+                                ./images/portfolio/desk-port-4-x2.jpg 2x" media="(min-width: 1200px)" />
                                 <source srcset="
                                 ./images/portfolio/tab-port-4-x1.jpg 1x,
                                 ./images/portfolio/tab-port-4-x2.jpg 2x" media="(min-width: 768px)" />
                                 <source srcset="
-                                ./images/portfolio/desk-port-4-x1.jpg 1x,
-                                ./images/portfolio/desk-port-4-x2.jpg 2x" media="(min-width: 1200px)" />
+                                ./images/portfolio/mob-port-4-x1.jpg 1x,
+                                ./images/portfolio/mob-port-4-x2.jpg 2x" media="(mфч-width: 767px)" />
                                 <img src="./images/portfolio/mob-port-4-x1.jpg" alt="Маркетинг: Проєкт Prime" />
                             </picture>
                             <div class="overlay">
@@ -222,14 +222,14 @@
                         <div class="exp-card">
                             <picture>
                                 <source srcset="
-                                ./images/portfolio/mob-port-5-x1.jpg 1x,
-                                ./images/portfolio/mob-port-5-x2.jpg 2x" media="(min-width: 320px)" />
+                                ./images/portfolio/desk-port-5-x1.jpg 1x,
+                                ./images/portfolio/desk-port-5-x2.jpg 2x" media="(min-width: 1200px)" />
                                 <source srcset="
                                 ./images/portfolio/tab-port-5-x1.jpg 1x,
                                 ./images/portfolio/tab-port-5-x2.jpg 2x" media="(min-width: 768px)" />
                                 <source srcset="
-                                ./images/portfolio/desk-port-5-x1.jpg 1x,
-                                ./images/portfolio/desk-port-5-x2.jpg 2x" media="(min-width: 1200px)" />
+                                ./images/portfolio/mob-port-5-x1.jpg 1x,
+                                ./images/portfolio/mob-port-5-x2.jpg 2x" media="(max-width: 767px)" />
                                 <img src="./images/portfolio/mob-port-5-x1.jpg" alt="Додаток: Проєкт Boxes" />
                             </picture>
                             <div class="overlay">
@@ -248,14 +248,14 @@
                         <div class="exp-card">
                             <picture>
                                 <source srcset="
-                                ./images/portfolio/mob-port-6-x1.jpg 1x,
-                                ./images/portfolio/mob-port-6-x2.jpg 2x" media="(min-width: 320px)" />
+                                ./images/portfolio/desk-port-6-x1.jpg 1x,
+                                ./images/portfolio/desk-port-6-x2.jpg 2x" media="(min-width: 1200px)" />
                                 <source srcset="
                                 ./images/portfolio/tab-port-6-x1.jpg 1x,
                                 ./images/portfolio/tab-port-6-x2.jpg 2x" media="(min-width: 768px)" />
                                 <source srcset="
-                                ./images/portfolio/desk-port-6-x1.jpg 1x,
-                                ./images/portfolio/desk-port-6-x2.jpg 2x" media="(min-width: 1200px)" />
+                                ./images/portfolio/mob-port-6-x1.jpg 1x,
+                                ./images/portfolio/mob-port-6-x2.jpg 2x" media="(max-width: 767px)" />
                                 <img src="./images/portfolio/mob-port-6-x1.jpg"
                                     alt="Веб-сайт: Inspiration has no Borders" />
                             </picture>
@@ -275,14 +275,14 @@
                         <div class="exp-card">
                             <picture>
                                 <source srcset="
-                                ./images/portfolio/mob-port-7-x1.jpg 1x,
-                                ./images/portfolio/mob-port-7-x2.jpg 2x" media="(min-width: 320px)" />
+                                ./images/portfolio/desk-port-7-x1.jpg 1x,
+                                ./images/portfolio/desk-port-7-x2.jpg 2x" media="(min-width: 1200px)" />
                                 <source srcset="
                                 ./images/portfolio/tab-port-7-x1.jpg 1x,
                                 ./images/portfolio/tab-port-7-x2.jpg 2x" media="(min-width: 768px)" />
                                 <source srcset="
-                                ./images/portfolio/desk-port-7-x1.jpg 1x,
-                                ./images/portfolio/desk-port-7-x1.jpg 2x" media="(min-width: 1200px)" />
+                                ./images/portfolio/mob-port-7-x1.jpg 1x,
+                                ./images/portfolio/mob-port-7-x2.jpg 2x" media="(max-width: 767px)" />
                                 <img src="./images/portfolio/mob-port-7-x1.jpg" alt="Дизайн: Видання Limited Edition" />
                             </picture>
                             <div class="overlay">
@@ -300,14 +300,14 @@
                         <div class="exp-card">
                             <picture>
                                 <source srcset="
-                                ./images/portfolio/mob-port-8-x1.jpg 1x,
-                                ./images/portfolio/mob-port-8-x2.jpg 2x" media="(min-width: 320px)" />
+                                ./images/portfolio/desk-port-8-x1.jpg 1x,
+                                ./images/portfolio/desk-port-8-x2.jpg 2x" media="(min-width: 1200px)" />
                                 <source srcset="
                                 ./images/portfolio/tab-port-8-x1.jpg 1x,
                                 ./images/portfolio/tab-port-8-x2.jpg 2x" media="(min-width: 768px)" />
                                 <source srcset="
-                                ./images/portfolio/desk-port-8-x1.jpg 1x,
-                                ./images/portfolio/desk-port-8-x2.jpg 2x" media="(min-width: 1200px)" />
+                                ./images/portfolio/mob-port-8-x1.jpg 1x,
+                                ./images/portfolio/mob-port-8-x2.jpg 2x" media="(max-width: 767px)" />
                                 <img src="./images/portfolio/mob-port-8-x1.jpg" alt="Маркетинг: Проєкт LAB" />
                             </picture>
                             <div class="overlay">
@@ -326,14 +326,14 @@
                         <div class="exp-card">
                             <picture>
                                 <source srcset="
-                                ./images/portfolio/mob-port-9-x1.jpg 1x,
-                                ./images/portfolio/mob-port-9-x2.jpg 2x" media="(min-width: 320px)" />
+                                ./images/portfolio/desk-port-9-x1.jpg 1x,
+                                ./images/portfolio/desk-port-9-x2.jpg 2x" media="(min-width: 1200px)" />
                                 <source srcset="
                                 ./images/portfolio/tab-port-9-x1.jpg 1x,
                                 ./images/portfolio/tab-port-9-x2.jpg 2x" media="(min-width: 768px)" />
                                 <source srcset="
-                                ./images/portfolio/desk-port-9-x1.jpg 1x,
-                                ./images/portfolio/desk-port-9-x2.jpg 2x" media="(min-width: 1200px)" />
+                                ./images/portfolio/mob-port-9-x1.jpg 1x,
+                                ./images/portfolio/mob-port-9-x2.jpg 2x" media="(max-width: 767px)" />
                                 <img src="./images/portfolio/mob-port-9-x1.jpg" alt="Додаток: Growing Business" />
                             </picture>
                             <div class="overlay">
