--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         <picture>
                             <source srcset="
                             ./images/team/mob-team-1-x1.jpg 1x,
-                            ./images/team/mob-team-1-x2.jpg 2x" media="(min-width: 320px)" />
+                            ./images/team/mob-team-1-x2.jpg 2x" media="(max-width: 767px)" />
                             <source srcset="
                             ./images/team/tab-team-1-x1.jpg 1x,
                             ./images/team/tab-team-1-x2.jpg 2x" media="(min-width: 768px)" />
@@ -238,7 +238,7 @@
                         <picture>
                             <source srcset="
                             ./images/team/mob-team-2-x1.jpg 1x,
-                            ./images/team/mob-team-2-x2.jpg 2x" media="(min-width: 320px)" />
+                            ./images/team/mob-team-2-x2.jpg 2x" media="(max-width: 767px)" />
                             <source srcset="
                             ./images/team/tab-team-2-x1.jpg 1x,
                             ./images/team/tab-team-2-x2.jpg 2x" media="(min-width: 768px)" />
@@ -285,7 +285,7 @@
                     <li class="team__item">
                         <picture>
                             <source srcset="./images/team/mob-team-3-x1.jpg 1x,
-                                ./images/team/mob-team-3-x2.jpg 2x" media="(min-width: 320px)" />
+                                ./images/team/mob-team-3-x2.jpg 2x" media="(max-width: 767px)" />
                             <source srcset="./images/team/tab-team-3-x1.jpg 1x,
                                 ./images/team/tab-team-3-x2.jpg 2x" media="(min-width: 768px)" />
                             <source srcset="./images/team/desk-team-3-x1.jpg 1x,
@@ -330,7 +330,7 @@
                     <li class="team__item">
                         <picture>
                             <source srcset="./images/team/mob-team-4-x1.jpg 1x,
-                                ./images/team/mob-team-4-x2.jpg 2x" media="(min-width: 320px)" />
+                                ./images/team/mob-team-4-x2.jpg 2x" media="(max-width: 767px)" />
                             <source srcset="./images/team/tab-team-4-x1.jpg 1x,
                                 ./images/team/tab-team-4-x2.jpg 2x" media="(min-width: 768px)" />
                             <source srcset="./images/team/desk-team-4-x1.jpg 1x,
