--- a/portfolio.html
+++ b/portfolio.html
@@ -175,7 +175,7 @@
                                 ./images/portfolio/tab-port-3-x2.jpg 2x" media="(min-width: 768px)" />
                                 <source srcset="
                                 ./images/portfolio/mob-port-3-x1.jpg 1x,
-                                ./images/portfolio/mob-port-3-x2.jpg 2x" media="(mфч-width: 767px)" />
+                                ./images/portfolio/mob-port-3-x2.jpg 2x" media="(max-width: 767px)" />
                                 <img src="./images/portfolio/mob-port-3-x1.jpg" alt="Додаток: Ресторан Seafood" />
                             </picture>
                             <div class="overlay">
@@ -201,7 +201,7 @@
                                 ./images/portfolio/tab-port-4-x2.jpg 2x" media="(min-width: 768px)" />
                                 <source srcset="
                                 ./images/portfolio/mob-port-4-x1.jpg 1x,
-                                ./images/portfolio/mob-port-4-x2.jpg 2x" media="(mфч-width: 767px)" />
+                                ./images/portfolio/mob-port-4-x2.jpg 2x" media="(max-width: 767px)" />
                                 <img src="./images/portfolio/mob-port-4-x1.jpg" alt="Маркетинг: Проєкт Prime" />
                             </picture>
                             <div class="overlay">
