--- a/index.html
+++ b/index.html
@@ -162,19 +162,24 @@
                 <h2 class="job__title">Чим ми займаємося</h2>
                 <ul class="job__list">
                     <li class="job__item">
-                        <div class="job__item--thumb"><img src="images/desktop-apps.jpg" alt="desktop apps"
+                        <div class="job__item--thumb"><img srcset="
+                            ./images/desktop-apps.jpg 1x,
+                            ./images/desktop-apps-x2.jpg 2x" media="(max-width: 370px)" alt="desktop apps"
                                 width="370" />
                             <p class="job__item--label">Десктопні додатки</p>
                         </div>
                     </li>
                     <li class="job__item">
-                        <div class="job__item--thumb"><img src="images/mobile-apps.jpg" alt="mobile apps" width="370" />
+                        <div class="job__item--thumb"><img srcset="
+                            ./images/mobile-apps.jpg 1x,
+                            ./images/mobile-apps-x2.jpg 2x" media="(max-width: 370px)" alt="mobile apps" width="370" />
                             <p class="job__item--label">Мобільні додатки</p>
                         </div>
                     </li>
                     <li class="job__item">
-                        <div class="job__item--thumb"><img src="images/design-solutions.jpg" alt="design solutions"
-                                width="370" />
+                        <div class="job__item--thumb"><img srcset="
+                            ./images/design-solutions.jpg 1x,
+                            ./images/design-solutions-x2.jpg 2x" media="(max-width: 370px)" width="370" />
                             <p class="job__item--label">Дизайнерські рішення</p>
                         </div>
                     </li>
